created id="main-doc", which contains the page's main content

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <main id="main-doc">
+  </main>
     <section class="main-section" id="introduction">
       <header>introduction</header>
   </main>
