Added the first element within each .main-section

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <main id="main-doc">
   </main>
     <section class="main-section" id="introduction">
+      
+    </section>
       <header>introduction</header>
   </main>
 </head>
